# autodocs

./: AutoDocs_Presentation.pptx  README.md  pyproject.toml  sample_flask_app.py  test_manual.py
.github/workflows/: autodocs.yml  ci.yml
autodocs/: __init__.py  cli.py  config.py
autodocs/diagram/: mermaid_builder.py
autodocs/gitops/: committer.py  pull_request.py
autodocs/pipeline/: workflow_generator.py
autodocs/scanner/: python_analyzer.py  repo_scanner.py
autodocs/writer/: markdown_templates.py  section_writer.py
